# hawkwatchers

./: .~lock.Labor_Conditions_Index.csv#  .~lock.texts06_07.csv#  2005_2006.csv  Labor_Conditions_Index.csv  README.md  all_rates 2.13.csv  allratesdf.csv  allreleasescleaned.csv  check_input.py  fed_crawler.py  get_hist_links.py  get_hist_texts.py  histdates.csv  nltk_processing.ipynb  nn_model.py  project tracker .docx  rates.csv  release_df.csv  release_scraping.py  release_scraping_hist.py  releaserates.csv  releaserates_df.csv  requirements.txt  texts06_07.csv  textsdf.csv  util.py
KTechNets/: .cache-elena.badillo.g  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml
KTechNets/KTechNets/: render.yml  settings.py  urls.py  wsgi.py
KTechNets/Stellar/: admin.py  apps.py  forms.py  ktechnets.py  models.py  nn_model.py  path_searching.py  stellar.py  urls.py  views.py
KTechNets/Stellar/migrations/: 0001_initial.py  0002_artchoice_artpath_delete_answer_delete_query.py  0003_artchoice_artchoice_size.py  0004_remove_artchoice_artchoice_date.py  0005_alter_artchoice_artchoice_answer_and_more.py
KTechNets/Stellar/static/: styleAb.css  styleQUERY.css  styleRES.css  styleb.css
KTechNets/Stellar/templates/Stellar/: about.html  add_query.html  index.html  query.html  result.html  results.php
KTechNets/Stellar/templates/Stellar/add_query/: result.html
data/: Labor_Conditions_Index.csv  all_rates.csv  all_rates.xlsx  allreleaserates.csv  out.csv  rates2.7.csv  release_df.csv  releaserates.csv
hawksite/: db.sqlite3  manage.py  requirements.txt
(+48 files in other folders)
